opam-version: "2.0"
name: "dropbox"
synopsis: "Binding to the Dropbox Remote API"
version: "0.1"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: [ "Christophe Troestler <Christophe.Troestler@umons.ac.be>" ]
license: "LGPL-3.0 with OCaml linking exception"
homepage: "https://github.com/Chris00/ocaml-docker"
dev-repo: "git://github.com/Chris00/ocaml-dropbox.git"
bug-reports: "https://github.com/Chris00/ocaml-docker/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
  ["dune" "build" "@doc" "-p" name] {with-doc}
]
depends: [
  ("atdgen" {= "1.10.0"} | "atdgen" {= "1.9.1"} | "atdgen" {= "1.9.0"} | "atdgen" {= "1.8.0"} | "atdgen" {= "1.7.2"} | "atdgen" {= "1.7.1"} | "atdgen" {= "1.6.1"} | "atdgen" {= "1.6.0"} | "atdgen" {= "1.5.0"})
  "base-bytes"
  "base-unix" {with-test}
  "cohttp-lwt"
  "cohttp-lwt-unix"
  ("lwt" {= "3.0.0"} | "lwt" {= "2.7.1"} | "lwt" {= "2.7.0"} | "lwt" {= "2.6.0"} | "lwt" {= "2.5.2"} | "lwt" {= "2.5.1"} | "lwt" {= "2.5.0"} | "lwt" {= "2.4.8"} | "lwt" {= "2.4.7"} | "lwt" {= "2.4.6"} | "lwt" {= "2.4.5"} | "lwt" {= "2.4.4"} | "lwt" {= "2.4.3"} | "lwt" {= "2.4.2"} | "lwt" {= "2.4.1"} | "lwt" {= "2.4.0"} | "lwt" {= "2.3.2"})
  "ocamlbuild" {bild & >= "1.11.0"}
]
description: """
Pure OCaml library to access Dropbox. Lwt and Async backends are
supported. In particular, this library can be used from a mirage
unikernel.
"""
